@@ -9,6 +9,9 @@ $VERSION = eval $VERSION;
 
 use DateTime::Format::DateParse;
 use OSSP::uuid;
+use CIF::Msg;
+use CIF::Msg::Feed;
+require Iodef::Pb::Simple;
 
 require Exporter;
 
@@ -23,7 +26,7 @@ our @ISA = qw(Exporter);
 # will save memory.
 our %EXPORT_TAGS = ( 'all' => [ qw(
     is_uuid generate_uuid_random generate_uuid_url generate_uuid_hash 
-    normalize_timestamp generate_uuid_ns debug init_logging
+    normalize_timestamp generate_uuid_ns debug init_logging to_feed
 ) ] );
 our @EXPORT_OK = ( @{ $EXPORT_TAGS{'all'} } );
 our @EXPORT = qw//;
@@ -87,11 +90,11 @@ sub debug {
     
     if($CIF::Logger){
          if($::debug > 5){
-            $CIF::Logger->debug("[DEBUG][$ts][$f:$sub:$line]: $msg\n");
+            $CIF::Logger->debug("[DEBUG][$ts][$f:$sub:$line]: $msg");
         } elsif($::debug > 1) {
-            $CIF::Logger->debug("[DEBUG][$ts][$sub]: $msg\n");
+            $CIF::Logger->debug("[DEBUG][$ts][$sub]: $msg");
         } else {
-            $CIF::Logger->debug("[DEBUG][$ts]: $msg\n");
+            $CIF::Logger->debug("[DEBUG][$ts]: $msg");
         }
     } else {
         if($::debug > 5){
@@ -190,4 +193,38 @@ sub normalize_timestamp {
 =back
 =cut
 
+sub to_feed {
+    my $args = shift;
+    
+    my $data        = $args->{'data'};
+    my $description = $args->{'description'}    || 'unknown';
+    my $confidence  = $args->{'confidence'}     || 0;
+    my $timestamp   = $args->{'timestamp'};
+    my $guid        = $args->{'guid'}           || generate_uuid_ns('everyone');
+    
+    unless($timestamp){
+        $timestamp = DateTime->from_epoch(epoch => time());
+        $timestamp = $timestamp->ymd().'T'.$timestamp->hms().'Z';
+    }
+    
+    my @feed;
+    foreach (@$data){
+        unless(ref($_) eq 'IODEFDocumentType'){
+            $_ = { $_ } unless(ref($_) eq 'HASH');
+            $_ = Iodef::Pb::Simple->new($_);
+        }
+        push(@feed,$_->encode());
+    }
+    
+    my $f = FeedType->new({
+        version         => $VERSION,
+        confidence      => $confidence,
+        description     => $description,
+        ReportTime      => $timestamp,
+        data            => \@feed,
+        uuid            => generate_uuid_random(),
+        guid            => $guid,
+    });
+    return $f->encode();
+}
 1;
