@@ -1,7 +1,9 @@
 Revision history for libcif
 
 0.99.06 2012-11
+    - backported 'advanced config'
     - added log::dispatch init_logging functions
+    - added asn query support
 
 0.99.05 2012-10-01
     - implemented cif-protocol perl bindings here
